tests/invalid_sem/def/def04.java
class main {
    static void run() {
        int b;
    }
}
